[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-maps-nearby-api"
version = "1.0.0"
description = "REST API для поиска ближайших объектов через Яндекс.Карты"
authors = [{name = "dant3s2w", email = "nikolaevda337@gmail.com"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"